Added avatar view

--- a/DemoMafia/JSON/AppText.json
+++ b/DemoMafia/JSON/AppText.json
@@ -6,12 +6,15 @@
     "It's cap or be capped.",
     "Get your knives out",
     "BWAHAHAHA",
-    "There's a killer... among us"
+    "There's a killer... among us",
+    "Amogus",
+    "Nani?",
+    "Omae wo mo, shinderu."
   ],
   "tips": [
     "Read the tutorial!",
     "You can change the settings of a game in the lobby",
-    "Look behind you.",
+    "Look behind you...",
     "Ghosts don't talk!",
     "Sometimes, other people are your best weapons.",
     "Don't cheat! It's not fun.",
